--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "radium": "^0.18.1",
     "react": "^15.4.1",
+    "react-bootstrap": "^0.30.7",
     "react-datepicker": "^0.39.0",
     "react-dom": "^15.4.1"
   },
